<resources>
    <string name="app_name" translatable="false">MarsNeoCaseStudy</string>
    <string name="usd">Dollar</string>
    <string name="eur">Euro</string>
    <string name="gbp">Pound</string>
    <string name="rub">Russian ruble</string>
    <string name="cny">China Yuan</string>
    <string name="home">Home</string>

    <string name="history">History</string>
    <string name="welcome_with_name">Hello, %1$s!</string>
    <string name="balance_text" translatable="false">%1$s%2$.2f</string>
    <string name="wallet_id">Wallet ID: %1$s</string>
    <string name="currency_units">Currency Units</string>
    <string name="add_money">Add Money</string>
    <string name="past_transactions">Past Transactions</string>
    <string name="buy">Buy</string>
    
    <string name="price" translatable="false">%1$.2f₺</string>
    <string name="buy_text">%1s Bought</string>
    <string name="price_bought">Price Bought: %1$.2f₺</string>
    <string name="total_price" translatable="false">%1s%2$.2f</string>
    <string name="_1s_you_want_to_buy">%1s you want to buy</string>
    <string name="total_price_text">Total Price</string>
    <string name="price_tl_start" translatable="false">₺%1$.2f</string>
    <string name="total" translatable="false">%1$.2f</string>

</resources>