<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.HomeFragment">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="@dimen/large_margin"
        android:text="@string/welcome_with_name"
        android:textSize="@dimen/large_text_size"
        />

    <TextView
        android:id="@+id/balanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:text="@string/balance_text"
        android:gravity="center"
        />
    
    <TextView
        android:id="@+id/walletText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text_size"
        android:text="@string/wallet_id"
        app:layout_constraintTop_toBottomOf="@id/balanceText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center"
        />
    
    <ImageView
        android:id="@+id/copyWallet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/copy"
        app:layout_constraintTop_toTopOf="@id/walletText"
        app:layout_constraintBottom_toBottomOf="@id/walletText"
        app:layout_constraintStart_toEndOf="@id/walletText"
        android:layout_marginStart="@dimen/small_margin"
        />


    <TextView
        android:id="@+id/currencyUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_units"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintTop_toBottomOf="@id/walletText"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintStart_toStartOf="@id/welcomeText"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/currencyUnits"
        android:layout_marginHorizontal="@dimen/medium_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/addMoneyButton"
        android:layout_marginVertical="@dimen/small_margin"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button_style"
        android:id="@+id/historyButton"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/medium_margin"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/past_transactions"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/baseline_history_24"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button_style"
        android:id="@+id/addMoneyButton"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/medium_margin"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/historyButton"
        android:text="@string/add_money"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/baseline_add_24"
        />

</androidx.constraintlayout.widget.ConstraintLayout>