<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/medium_icon_size"
        android:layout_height="@dimen/medium_icon_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/medium_margin"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/boughtPrice"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/buy_text"
        app:layout_constraintStart_toEndOf="@id/icon"
        android:layout_marginStart="@dimen/small_margin"
        />

    <TextView
        android:id="@+id/boughtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/date"
        android:text="@string/price_bought"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"

        />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/boughtPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="date"
        android:layout_marginBottom="@dimen/small_margin"
        app:layout_constraintStart_toStartOf="@id/name"
        />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/price"
        android:textColor="@color/green"
        />


</androidx.constraintlayout.widget.ConstraintLayout>