<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/topText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/small_margin"
        />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/medium_icon_size"
        android:layout_height="@dimen/medium_icon_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topText"
        android:layout_margin="@dimen/medium_margin"
        />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_text_size"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_margin="@dimen/medium_margin"
        />

    <TextView
        android:id="@+id/desc1"
        android:text="@string/_1s_you_want_to_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/price"
        />

    <EditText
        android:id="@+id/firstInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc1"
        android:textSize="@dimen/large_text_size"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:padding="3dp"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:gravity="end"

        />

    <TextView
        android:id="@+id/desc2"
        android:text="@string/total_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/firstInput"

        />

    <EditText
        android:id="@+id/secondInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc2"
        android:textSize="@dimen/large_text_size"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:padding="3dp"
        android:enabled="false"
        android:editable="false"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/secondInput"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/buy"
        />


</androidx.constraintlayout.widget.ConstraintLayout>